add nav bar in HTML

--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engins-->
     <meta name="description" content="Healthy diet alternative for training">
     <meta name="keywords" content="vegan, vegan diet, nutrition, healthy nutrition, training, healthy lifestyle, stronger">
     <meta name="author" content="Asya Haroyan">
     <title>Stronger</title>
+    <!--Favicon-->
+
+    <!--Stylesheet-->
+
 </head>
 <body>
     <!--Header-->
     <header>
-    
+        <!--Logo-->
+        <a href="index.html"><h1 id="logo">Stronger</h1></a>
+
+        <!--Navigation bar for mobiles-->
+        <label for="nav-bar"><span>X</span></label>
+        <input type="checkbox" id="nav-bar" class="nav-toggle-bar">
+    <nav>
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#">Nutrition</a></li>
+    <li><a href="#">Join</a></li>
+</ul>
+    </nav>
     </header>
     
     <!--Main content-->
