--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta name="author" content="Asya Haroyan">
     <title>Stronger</title>
     <!--Favicon-->
-
+<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+<link rel="manifest" href="assets/favicon/site.webmanifest">
     <!--Stylesheet-->
 
 </head>
@@ -50,7 +53,7 @@
             <i class="fa-brands fa-tiktok"></i></a></li>
     </ul>
     </footer>
-    
+
     <!--Font awesome kit-->
     <script src="https://kit.fontawesome.com/74774a4a16.js" crossorigin="anonymous"></script>
 </body>
