add basic styling for header and nav bar

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
     <!--Header-->
     <header>
       <!--Logo-->
-      <a href="index.html"><h1 id="logo">Stronger</h1></a>
+      <a href="index.html"><h1 id="logo">stronger</h1></a>
 
       <!--Navigation bar for mobiles-->
-      <label for="nav-bar"><span>X</span></label>
+      <label for="nav-bar" class="nav-toggle-label">
+        <i class="fa-solid fa-chevron-down"></i>
+      </label>
       <input type="checkbox" id="nav-bar" class="nav-toggle-bar" />
       <nav>
-        <ul>
+        <ul id="menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Nutrition</a></li>
           <li><a href="#">Join</a></li>
