underline the active page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <input type="checkbox" id="nav-bar" class="nav-toggle-bar" />
       <nav>
         <ul id="menu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#">Nutrition</a></li>
           <li><a href="#">Join</a></li>
         </ul>
