add html pages Join, Nutrition

--- a/nutrition.html
+++ b/nutrition.html
@@ -35,11 +35,14 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <!--Header-->
     <header>
       <!--Logo-->
-      <a href="index.html"><h1 id="logo">stronger</h1></a>
+      <a href="index.html">
+        <h1 id="logo">stronger</h1>
+      </a>
 
       <!--Navigation bar for mobiles-->
       <label for="nav-bar" class="nav-toggle-label">
@@ -48,8 +51,8 @@
       <input type="checkbox" id="nav-bar" class="nav-toggle-bar" />
       <nav>
         <ul id="menu">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="nutrition.html">Nutrition</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="nutrition.html" class="active">Nutrition</a></li>
           <li><a href="join.html">Join</a></li>
         </ul>
       </nav>
