add the logo V and resize the header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <!--Header-->
     <header>
       <!--Logo-->
-      <a href="index.html"><h1 id="logo">stronger</h1></a>
+      <a href="index.html">
+        <h1 id="logo">stronger</h1>
+        <div id="logo-v"></div>
+      </a>
 
       <!--Navigation bar for mobiles-->
       <label for="nav-bar" class="nav-toggle-label">
