--- a/nutrition.html
+++ b/nutrition.html
@@ -40,9 +40,10 @@
     <!--Header-->
     <header>
       <!--Logo-->
-      <a href="index.html">
+    <a href="index.html">
         <h1 id="logo">stronger</h1>
-      </a>
+        <div id="logo-v"></div>
+    </a>
 
       <!--Navigation bar for mobiles-->
       <label for="nav-bar" class="nav-toggle-label">
