add article in nutrition.html page

--- a/nutrition.html
+++ b/nutrition.html
@@ -40,10 +40,10 @@
     <!--Header-->
     <header>
       <!--Logo-->
-    <a href="index.html">
+      <a href="index.html">
         <h1 id="logo">stronger</h1>
         <div id="logo-v"></div>
-    </a>
+      </a>
 
       <!--Navigation bar for mobiles-->
       <label for="nav-bar" class="nav-toggle-label">
@@ -60,7 +60,69 @@
     </header>
 
     <!--Main content-->
-    <main>MAIN</main>
+    <main>
+      <section id="diet-info" class="nutrition-info">
+        <h2>Humans diet</h2>
+
+        <article>
+          <h3>Are Humans Supposed to Eat Meat?</h3>
+          <p>
+            People who eat meat argue that it’s “natural” for humans to consume
+            animals. But is this true or just an excuse to ignore the horrific
+            ways in which animals are killed for food? Are we really supposed to
+            eat meat?
+          </p>
+          <br />
+          <h3>We Don’t Have Carnivorous Teeth</h3>
+
+          <p>
+            Humans have short, soft fingernails and small, dull canine teeth.
+            All true carnivores have sharp claws and large canine teeth that are
+            capable of tearing flesh without the help of knives and forks.
+          </p>
+          <p>
+            Dr. Richard Leakey, a renowned anthropologist, says, “You can’t tear
+            flesh by hand, you can’t tear hide by hand. Our anterior teeth are
+            not suited for tearing flesh or hide. We don’t … have large canine
+            teeth, and we wouldn’t have been able to deal with food sources that
+            required those large canines.”
+          </p>
+          <br />
+          <h3>Our Digestive System Doesn’t Like Meat</h3>
+          <p>
+            Carnivores have short intestinal tracts that allow meat to pass
+            quickly through their digestive system. Humans’ intestinal tracts
+            are much longer, like those of plant-eaters. This gives the body
+            more time to break down fiber and absorb the nutrients from
+            plant-based foods.
+          </p>
+          <br />
+          <h3>Meat Can Cause Heart Disease in Humans</h3>
+          <p>
+            Carnivorous animals in the wild virtually NEVER develop heart
+            disease or suffer from strokes—ailments that humans can suffer an
+            increased risk of developing due to their consumption of the
+            saturated fat and cholesterol found in meat. Heart disease is the
+            number one killer in the U.S., according to the American Heart
+            Association. If humans were meant to eat meat, why do meat-eaters
+            have a 32 percent higher risk of developing heart disease than
+            vegetarians?
+          </p>
+          <br />
+          <p>
+            Numerous studies have shown that meat is not ideal for the human
+            body and may actually be making us sick and killing us. The human
+            body is intended to function on plant-based foods that are full of
+            fiber, antioxidants, unsaturated fat, essential fatty acids,
+            phytochemicals, and cholesterol-free protein.
+          </p>
+
+          <aside class="sourse">
+            Source:
+            <a href="https://www.peta.org/features/are-humans-supposed-to-eat-meat/">PETA</a>.</aside>
+        </article>
+      </section>
+    </main>
 
     <!--Footer-->
     <footer>
