validating index.html page and adding header for article and section

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
       </section>
 
       <section id="intro" class="nutrition-info">
-        <h2>When and why did humans start eating meat?</h2>
-        <br />
+        <h2>History of human diet.</h2>
         <article>
+          <h2>When and why did humans start eating meat?</h2>
+          <br />
           <p>
             By about two and a half million years ago, early humans started to
             occasionally eat meat. By about 2 million years ago, this happened
