add a chart for protein and add an anchor for watching the movie

--- a/nutrition.html
+++ b/nutrition.html
@@ -202,11 +202,81 @@
             >
             and
             <a
-              href="https://www.ranker.com/list/athletes-who-are-vegan/people-in-sports">Ranker</a>
+              href="https://www.ranker.com/list/athletes-who-are-vegan/people-in-sports"
+              >Ranker</a
+            >
           </aside>
         </article>
       </section>
-      <!-- The section about diet -->
+
+      <!-- Plant vs animal protein section  -->
+      <section id="plant-protein" class="nutrition-info">
+        <h2>Plant vs. Animal Protein</h2>
+        <article>
+          <p>
+            As we already know whole-food plant-based proteins usually contain
+            fiber, but they also come with a number of other health benefits.
+            Plant-based proteins contain a wide array of vitamins, minerals, and
+            antioxidants while animal proteins tend to be higher in fat and
+            cholesterol.
+          </p>
+          <br />
+          <h3>Do you want to know more? Check the documentary here!</h3>
+          <div id="movie-buttom">
+            <a href="#movie">Watch the movie!</a>
+          </div>
+        </article>
+
+        <!-- Table for protein chart -->
+        <table id="bean-beef">
+          <caption>
+            Nutrition
+          </caption>
+
+          <tr>
+            <th>Beans <i class="fa-solid fa-leaf"></i></th>
+            <th>Beef <i class="fa-solid fa-cow"></i></th>
+          </tr>
+          <tr>
+            <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
+            <!-- Beans -->
+            <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
+            <!-- Beef -->
+          </tr>
+          <tr>
+            <td><i class="fa-solid fa-check"></i>Saturated fat: 0g</td>
+            <!-- Beans -->
+            <td><i class="fa-solid fa-xmark"></i>Saturated fat: 12g</td>
+            <!-- Beef -->
+          </tr>
+          <tr>
+            <td><i class="fa-solid fa-check"></i>Fiber: 15g</td>
+            <!-- Beans -->
+            <td><i class="fa-solid fa-xmark"></i>Fiber: 0g</td>
+            <!-- Beef -->
+          </tr>
+          <tr>
+            <td><i class="fa-solid fa-check"></i>Calcium: 123mg</td>
+            <!-- Beans -->
+            <td><i class="fa-solid fa-xmark"></i>Calcium: 16mg</td>
+            <!-- Beef -->
+          </tr>
+          <tr>
+            <td><i class="fa-solid fa-check"></i>Iron: 5mg</td>
+            <!-- Beans -->
+            <td><i class="fa-solid fa-xmark"></i>Iron: 1.9mg</td>
+            <!-- Beef -->
+          </tr>
+          <tr>
+            <td><i class="fa-solid fa-check"></i>Cholesterol: 0mg</td>
+            <!-- Beans -->
+            <td><i class="fa-solid fa-xmark"></i>Iron: 74mg</td>
+            <!-- Beef -->
+          </tr>
+        </table>
+      </section>
+
+      <!-- The humans diet article -->
       <section id="diet-info" class="nutrition-info">
         <h2>Humans diet</h2>
 
