style the athletes list

--- a/nutrition.html
+++ b/nutrition.html
@@ -337,21 +337,25 @@
             Source:
             <a
               href="https://www.peta.org/features/are-humans-supposed-to-eat-meat/"
-              >PETA</a>.</aside>
+              >PETA</a
+            >.
+          </aside>
         </article>
       </section>
 
-    <!-- Section for the movie -->
-    <section id="movie" class="nutrition-info">
+      <!-- Section for the movie -->
+      <section id="movie" class="nutrition-info">
         <h2>The Game Changers</h2>
         <div id="game-changers">
-            <!-- div to make the iframe responsive -->
-            <iframe src="https://www.youtube.com/embed/rTGM2KjNGUU"
-                title="The Game Changer | Netflix full movie 2019 | The Game Changers Full Movie In Hindi #thegamechanger"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+          <!-- div to make the iframe responsive -->
+          <iframe
+            src="https://www.youtube.com/embed/rTGM2KjNGUU"
+            title="The Game Changer | Netflix full movie 2019 | The Game Changers Full Movie In Hindi #thegamechanger"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
-    </section>
+      </section>
     </main>
 
     <!--Footer-->
