--- a/join.html
+++ b/join.html
@@ -60,7 +60,20 @@
     </header>
 
     <!--Main content-->
-    <main>MAIN</main>
+    <main>
+<section id="join" class="nutrition-info">
+    <div id="join-reason">
+        <h2>Join the 10 days challange.</h2>
+        <p>Do you feel unsure if you can go without meat for 10 days? Almost everyons feels the same way before trying.
+            Do you feel like the meatless diet is boaring and not tasty at all? We can prove you that there are more to
+            eat then you
+            would expect. <em>Join us and get recepies for 10 days meatless diet.</em> We can promise that it is worth
+            to try.</p>
+    </div>
+    
+</section>
+
+    </main>
 
     <!--Footer-->
     <footer>
