add hover effects for join and reset buttons

--- a/nutrition.html
+++ b/nutrition.html
@@ -240,44 +240,44 @@
           </caption>
 
           <tr>
-            <th>Beans <i class="fa-solid fa-leaf"></i></th>
             <th>Beef <i class="fa-solid fa-cow"></i></th>
+            <th>Beans <i class="fa-solid fa-leaf"></i></th>
           </tr>
           <tr>
-            <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
-            <!-- Beans -->
             <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
             <!-- Beef -->
+            <td><i class="fa-solid fa-check"></i>Protein: 22g</td>
+            <!-- Beans -->
           </tr>
           <tr>
-            <td><i class="fa-solid fa-check"></i>Saturated fat: 0g</td>
-            <!-- Beans -->
             <td><i class="fa-solid fa-xmark"></i>Saturated fat: 12g</td>
             <!-- Beef -->
+            <td><i class="fa-solid fa-check"></i>Saturated fat: 0g</td>
+            <!-- Beans -->
           </tr>
           <tr>
-            <td><i class="fa-solid fa-check"></i>Fiber: 15g</td>
-            <!-- Beans -->
             <td><i class="fa-solid fa-xmark"></i>Fiber: 0g</td>
             <!-- Beef -->
+            <td><i class="fa-solid fa-check"></i>Fiber: 15g</td>
+            <!-- Beans -->
           </tr>
           <tr>
-            <td><i class="fa-solid fa-check"></i>Calcium: 123mg</td>
-            <!-- Beans -->
             <td><i class="fa-solid fa-xmark"></i>Calcium: 16mg</td>
             <!-- Beef -->
+            <td><i class="fa-solid fa-check"></i>Calcium: 123mg</td>
+            <!-- Beans -->
           </tr>
           <tr>
-            <td><i class="fa-solid fa-check"></i>Iron: 5mg</td>
-            <!-- Beans -->
             <td><i class="fa-solid fa-xmark"></i>Iron: 1.9mg</td>
             <!-- Beef -->
+            <td><i class="fa-solid fa-check"></i>Iron: 5mg</td>
+            <!-- Beans -->
           </tr>
           <tr>
-            <td><i class="fa-solid fa-check"></i>Cholesterol: 0mg</td>
-            <!-- Beans -->
             <td><i class="fa-solid fa-xmark"></i>Iron: 74mg</td>
             <!-- Beef -->
+            <td><i class="fa-solid fa-check"></i>Cholesterol: 0mg</td>
+            <!-- Beans -->
           </tr>
         </table>
       </section>
@@ -343,6 +343,9 @@
             Source:
             <a
               href="https://www.peta.org/features/are-humans-supposed-to-eat-meat/"
+              target="_blank"
+              rel="noopener"
+              aria-label="visit the Peta page (opens in a new tab)"
               >PETA</a
             >.
           </aside>
