--- a/join.html
+++ b/join.html
@@ -61,35 +61,72 @@
 
     <!--Main content-->
     <main>
-<section id="join" class="nutrition-info">
-    <div id="join-reason">
-        <h2>Join the 10 days challange.</h2>
-        <p>Do you feel unsure if you can go without meat for 10 days? Almost everyons feels the same way before trying.
-            Do you feel like the meatless diet is boaring and not tasty at all? We can prove you that there are more to
-            eat then you
-            would expect. <em>Join us and get recepies for 10 days meatless diet.</em> We can promise that it is worth
-            to try.</p>
-    </div>
-    <form action="https://formdump.codeinstitute.net" method="post" id="join-form">
-        <h2>Join us here! <i class="fa-solid fa-hand-point-down"></i></h2>
-    
-        <label for="first-name" class="join-label">First Name</label>
-        <input type="text" name="first-name" id="first-name" class="text-input" placeholder="John" required>
-        <br>
-        <label for="last-name" class="join-label">Last Name</label>
-        <input type="text" name="last-name" id="last-name" class="text-input" placeholder="Smith" required>
-        <br>
-        <label for="email-address" class="join-label">Email Address</label>
-        <input type="email" name="email-address" id="email-address" class="text-input" placeholder="js@gmail.com" required>
-        <br>
-        <label for="birth-date" class="join-label">Your Birthdate</label>
-        <input type="date" name="birth-date" id="birth-date" class="text-input">
-        <br>
-        <button type="submit" class="join-reset-btn" id="join-btn">Join <i class="fa-solid fa-check"></i></button>
-        <button type="reset" class="join-reset-btn" id="reset-btn">Reset <i class="fa-solid fa-xmark"></i></button>
-    </form>
-</section>
+      <section id="join" class="nutrition-info">
+        <div id="join-reason">
+          <h2>Join the 10 days challange.</h2>
+          <p>
+            Do you feel unsure if you can go without meat for 10 days? Almost
+            everyons feels the same way before trying. Do you feel like the
+            meatless diet is boaring and not tasty at all? We can prove you that
+            there are more to eat then you would expect.
+            <em>Join us and get recepies for 10 days meatless diet.</em> We can
+            promise that it is worth to try.
+          </p>
+        </div>
+        <form
+          action="https://formdump.codeinstitute.net"
+          method="post"
+          id="join-form"
+        >
+          <h2>Join us here! <i class="fa-solid fa-hand-point-down"></i></h2>
 
+          <label for="first-name" class="join-label">First Name</label>
+          <input
+            type="text"
+            name="first-name"
+            id="first-name"
+            class="text-input"
+            placeholder="John"
+            required
+            autofocus
+          />
+          <br />
+          <label for="last-name" class="join-label">Last Name</label>
+          <input
+            type="text"
+            name="last-name"
+            id="last-name"
+            class="text-input"
+            placeholder="Smith"
+            required
+          />
+          <br />
+          <label for="email-address" class="join-label">Email Address</label>
+          <input
+            type="email"
+            name="email-address"
+            id="email-address"
+            class="text-input"
+            placeholder="js@gmail.com"
+            required
+          />
+          <br />
+          <label for="birth-date" class="join-label">Your Birthdate</label>
+          <input
+            type="date"
+            name="birth-date"
+            id="birth-date"
+            class="text-input"
+          />
+          <br />
+          <button type="submit" class="join-reset-btn" id="join-btn">
+            Join <i class="fa-solid fa-check"></i>
+          </button>
+          <button type="reset" class="join-reset-btn" id="reset-btn">
+            Reset <i class="fa-solid fa-xmark"></i>
+          </button>
+        </form>
+      </section>
     </main>
 
     <!--Footer-->
