divide the athletes list in 2 containers to make sure that the names and the pictures will be under each other

--- a/nutrition.html
+++ b/nutrition.html
@@ -94,104 +94,107 @@
         <article id="vegan-athletes">
           <h3>Some of the most successful athletes/sportsmen.</h3>
           <dl>
-            <dt>
-              Mike Tyson - Boxer<br /><img
-                src="assets/images/mike-tyson.webp"
-                alt="Image of Mike Tyson"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              Michael Gerard Tyson (born June 30, 1966) is an American former
-              professional boxer who competed from 1985 to 2005.
-            </dd>
+            <div class="athlete-container">
+              <dt>
+                Mike Tyson - Boxer<br /><img
+                  src="assets/images/mike-tyson.webp"
+                  alt="Image of Mike Tyson"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                Michael Gerard Tyson (born June 30, 1966) is an American former
+                professional boxer who competed from 1985 to 2005.
+              </dd>
 
-            <dt>
-              Tony Gonzalez – NFL Player<br /><img
-                src="assets/images/tony-gonzalez.webp"
-                alt="Image of Tony Gonzalez"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              Tony Gonzalez is American football tight end and actor, who played
-              17 seasons in the National Football League.
-            </dd>
+              <dt>
+                Tony Gonzalez – NFL Player<br /><img
+                  src="assets/images/tony-gonzalez.webp"
+                  alt="Image of Tony Gonzalez"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                Tony Gonzalez is American football tight end and actor, who
+                played 17 seasons in the National Football League.
+              </dd>
 
-            <dt>
-              David Haye – Boxer<br /><img
-                src="assets/images/david-haye.webp"
-                alt="Image of David Haye"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              David Haye is a British boxer with world titles in two weight
-              categories. In 2008, he won three of the four major boxing world
-              titles at cruiserweight.
-            </dd>
+              <dt>
+                David Haye – Boxer<br /><img
+                  src="assets/images/david-haye.webp"
+                  alt="Image of David Haye"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                David Haye is a British boxer with world titles in two weight
+                categories. In 2008, he won three of the four major boxing world
+                titles at cruiserweight.
+              </dd>
 
-            <dt>
-              Nate Diaz – UFC Fighter<br /><img
-                src="assets/images/nate-diaz.webp"
-                alt="Image of Nate Diaz"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              If Nate can wrestle and punch in a ring for 25 minutes and show no
-              sign of fatigue then his diet must be working.
-            </dd>
+              <dt>
+                Nate Diaz – UFC Fighter<br /><img
+                  src="assets/images/nate-diaz.webp"
+                  alt="Image of Nate Diaz"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                If Nate can wrestle and punch in a ring for 25 minutes and show
+                no sign of fatigue then his diet must be working.
+              </dd>
+            </div>
+            <div class="athlete-container">
+              <dt>
+                Heather Mills – Skiier<br /><img
+                  src="assets/images/heather-mills.webp"
+                  alt="Image of Heather Mills"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                Heather Mills is known as “the fastest disabled woman on the
+                plant,” vegan skier
+              </dd>
 
-            <dt>
-              Heather Mills – Skiier<br /><img
-                src="assets/images/heather-mills.webp"
-                alt="Image of Heather Mills"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              Heather Mills is known as “the fastest disabled woman on the
-              plant,” vegan skier
-            </dd>
+              <dt>
+                Kendrick Farris – Weightlifter<br /><img
+                  src="assets/images/kendrick-farris.webp"
+                  alt="Image of Kendrick Farris"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                Farris is an American Olympic weightlifter and finished 11th in
+                his weight class at the 2016 Olympic games in Rio de Janeiro.
+                Who says a vegan cannot lift heavy weights?
+              </dd>
 
-            <dt>
-              Kendrick Farris – Weightlifter<br /><img
-                src="assets/images/kendrick-farris.webp"
-                alt="Image of Kendrick Farris"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              Farris is an American Olympic weightlifter and finished 11th in
-              his weight class at the 2016 Olympic games in Rio de Janeiro. Who
-              says a vegan cannot lift heavy weights?
-            </dd>
+              <dt>
+                Scott Jurek – Long Distance Runner<br /><img
+                  src="assets/images/scott-jurek.webp"
+                  alt="Image of Scott Jurek"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                Scott Jurek is an American ultramarathon runner and one of the
+                first vegan athletes known to the public, a winner of 16
+                prestigious ultramarathon titles.
+              </dd>
 
-            <dt>
-              Scott Jurek – Long Distance Runner<br /><img
-                src="assets/images/scott-jurek.webp"
-                alt="Image of Scott Jurek"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              Scott Jurek is an American ultramarathon runner and one of the
-              first vegan athletes known to the public, a winner of 16
-              prestigious ultramarathon titles.
-            </dd>
-
-            <dt>
-              Jermain Defoe – Footballer<br /><img
-                src="assets/images/jermain-defoe.webp"
-                alt="Image of Jermain Defoe"
-                class="veg-athlete"
-              />
-            </dt>
-            <dd>
-              Famous for his insane goal scoring rate of over 150 Premier League
-              Goals, Defoe is one of England’s finest assets.
-            </dd>
+              <dt>
+                Jermain Defoe – Footballer<br /><img
+                  src="assets/images/jermain-defoe.webp"
+                  alt="Image of Jermain Defoe"
+                  class="veg-athlete"
+                />
+              </dt>
+              <dd>
+                Famous for his insane goal scoring rate of over 150 Premier
+                League Goals, Defoe is one of England’s finest assets.
+              </dd>
+            </div>
           </dl>
           <br />
           <aside class="sourse">
