adjust positioning with flex boxes on the join page

--- a/join.html
+++ b/join.html
@@ -73,59 +73,61 @@
             promise that it is worth to try.
           </p>
         </div>
-        <form
-          action="https://formdump.codeinstitute.net"
-          method="post"
-          id="join-form"
-        >
-          <h2>Join us here! <i class="fa-solid fa-hand-point-down"></i></h2>
+        <div id="form-container">
+          <form
+            action="https://formdump.codeinstitute.net"
+            method="post"
+            id="join-form"
+          >
+            <h2>Join us here! <i class="fa-solid fa-hand-point-down"></i></h2>
 
-          <label for="first-name" class="join-label">First Name</label>
-          <input
-            type="text"
-            name="first-name"
-            id="first-name"
-            class="text-input"
-            placeholder="John"
-            required
-            autofocus
-          />
-          <br />
-          <label for="last-name" class="join-label">Last Name</label>
-          <input
-            type="text"
-            name="last-name"
-            id="last-name"
-            class="text-input"
-            placeholder="Smith"
-            required
-          />
-          <br />
-          <label for="email-address" class="join-label">Email Address</label>
-          <input
-            type="email"
-            name="email-address"
-            id="email-address"
-            class="text-input"
-            placeholder="js@gmail.com"
-            required
-          />
-          <br />
-          <label for="birth-date" class="join-label">Your Birthdate</label>
-          <input
-            type="date"
-            name="birth-date"
-            id="birth-date"
-            class="text-input"
-          />
-          <br />
-          <button type="submit" class="join-reset-btn" id="join-btn">
-            Join <i class="fa-solid fa-check"></i>
-          </button>
-          <button type="reset" class="join-reset-btn" id="reset-btn">
-            Reset <i class="fa-solid fa-xmark"></i>
-          </button>
-        </form>
+            <label for="first-name" class="join-label">First Name</label>
+            <input
+              type="text"
+              name="first-name"
+              id="first-name"
+              class="text-input"
+              placeholder="John"
+              required
+              autofocus
+            />
+            <br />
+            <label for="last-name" class="join-label">Last Name</label>
+            <input
+              type="text"
+              name="last-name"
+              id="last-name"
+              class="text-input"
+              placeholder="Smith"
+              required
+            />
+            <br />
+            <label for="email-address" class="join-label">Email Address</label>
+            <input
+              type="email"
+              name="email-address"
+              id="email-address"
+              class="text-input"
+              placeholder="js@gmail.com"
+              required
+            />
+            <br />
+            <label for="birth-date" class="join-label">Your Birthdate</label>
+            <input
+              type="date"
+              name="birth-date"
+              id="birth-date"
+              class="text-input"
+            />
+            <br />
+            <button type="submit" class="join-reset-btn" id="join-btn">
+              Join <i class="fa-solid fa-check"></i>
+            </button>
+            <button type="reset" class="join-reset-btn" id="reset-btn">
+              Reset <i class="fa-solid fa-xmark"></i>
+            </button>
+          </form>
+        </div>
       </section>
     </main>
 
