add title for the athletes' images to show as the mouse hovers over

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               target="_blank"
               rel="noopener"
               aria-label="visit the Smithsonianmag page (opens in a new tab)"
-              >SMITHSONIAN magazine</a
+              >SMITHSONIAN</a
             >
           </aside>
         </article>
