--- a/nutrition.html
+++ b/nutrition.html
@@ -110,6 +110,7 @@
                   src="assets/images/mike-tyson.webp"
                   alt="Image of Mike Tyson"
                   class="veg-athlete"
+                  title="Mike Tyson"
                 />
               </dt>
               <dd>
@@ -122,6 +123,7 @@
                   src="assets/images/tony-gonzalez.webp"
                   alt="Image of Tony Gonzalez"
                   class="veg-athlete"
+                  title="Tony Gonzalez"
                 />
               </dt>
               <dd>
@@ -134,6 +136,7 @@
                   src="assets/images/david-haye.webp"
                   alt="Image of David Haye"
                   class="veg-athlete"
+                  title="David Haye"
                 />
               </dt>
               <dd>
@@ -147,6 +150,7 @@
                   src="assets/images/nate-diaz.webp"
                   alt="Image of Nate Diaz"
                   class="veg-athlete"
+                  title="Nate Diaz"
                 />
               </dt>
               <dd>
@@ -160,6 +164,7 @@
                   src="assets/images/heather-mills.webp"
                   alt="Image of Heather Mills"
                   class="veg-athlete"
+                  title="Heather Mills"
                 />
               </dt>
               <dd>
@@ -172,6 +177,7 @@
                   src="assets/images/kendrick-farris.webp"
                   alt="Image of Kendrick Farris"
                   class="veg-athlete"
+                  title="Kendrick Farris"
                 />
               </dt>
               <dd>
@@ -185,6 +191,7 @@
                   src="assets/images/scott-jurek.webp"
                   alt="Image of Scott Jurek"
                   class="veg-athlete"
+                  title="Scott Jurek"
                 />
               </dt>
               <dd>
@@ -198,6 +205,7 @@
                   src="assets/images/jermain-defoe.webp"
                   alt="Image of Jermain Defoe"
                   class="veg-athlete"
+                  title="Jermain Defoe"
                 />
               </dt>
               <dd>
