add more comments to the code

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <!--Main content-->
     <main>
+      <!-- Hero img -->
       <section id="landing-page">
         <div id="bg-image">
           <div id="hero-img"></div>
@@ -69,6 +70,7 @@
         </div>
       </section>
 
+      <!-- Introduction section -->
       <section id="intro" class="nutrition-info">
         <h2>History of human diet.</h2>
         <article>
