--- a/nutrition.html
+++ b/nutrition.html
@@ -61,7 +61,7 @@
 
     <!--Main content-->
     <main>
-      <!-- Section about athletes -->
+      <!-- Section about gladiators -->
       <section id="athletes" class="nutrition-info">
         <article>
           <h2>The Best Athletes in Ancient Rome were Vegetarian!</h2>
@@ -93,6 +93,8 @@
             >
           </aside>
         </article>
+
+        <!-- The list of athletes -->
         <div id="veg-header">
           <h2>Do you know any sportsmen/athlete who is vegan?</h2>
           <h3>
@@ -309,6 +311,7 @@
       <section id="diet-info" class="nutrition-info">
         <h2>Humans diet</h2>
         <article>
+          <!-- Containers for styling -->
           <div class="container">
             <h3>Are Humans Supposed to Eat Meat?</h3>
             <p>
