--- a/join.html
+++ b/join.html
@@ -45,7 +45,7 @@
         <div id="logo-v"></div>
       </a>
 
-      <!--Navigation bar for mobiles-->
+      <!--Navigation bar -->
       <label for="nav-bar" class="nav-toggle-label">
         <i class="fa-solid fa-chevron-down"></i>
       </label>
@@ -73,6 +73,8 @@
             promise that it is worth to try.
           </p>
         </div>
+
+        <!-- Join form -->
         <div id="form-container">
           <form
             action="https://formdump.codeinstitute.net"
