add buttons next to each other for bigger screens

--- a/join.html
+++ b/join.html
@@ -122,12 +122,14 @@
               class="text-input"
             />
             <br />
-            <button type="submit" class="join-reset-btn" id="join-btn">
-              Join <i class="fa-solid fa-check"></i>
-            </button>
-            <button type="reset" class="join-reset-btn" id="reset-btn">
-              Reset <i class="fa-solid fa-xmark"></i>
-            </button>
+            <div id="btn-container">
+              <button type="submit" class="join-reset-btn" id="join-btn">
+                Join <i class="fa-solid fa-check"></i>
+              </button>
+              <button type="reset" class="join-reset-btn" id="reset-btn">
+                Reset <i class="fa-solid fa-xmark"></i>
+              </button>
+            </div>
           </form>
         </div>
       </section>
